--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "veggy",
+  "name": "adidas",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.2.0",
-    "@material-ui/icons": "^4.2.1",
-    "axios": "0.19.0",
+    "@material-ui/core": "^4.5.1",
+    "axios": "^0.19.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-spinners": "^0.6.1",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
